--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: Test Project
 on: push
 jobs:
-  test:
+  test1:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
@@ -14,7 +14,19 @@ jobs:
         run: npm ci
       - name: run tests
         run: npm test
-        
+  test2:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Install nodejs
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+      - name: install dependencies
+        run: npm ci
+      - name: run tests
+        run: npm test
         
         
         
