--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
         run: npm ci
       - name: run tests
         run: npm test
-  test2:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
@@ -22,11 +22,12 @@ jobs:
       - name: Install nodejs
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 18
       - name: install dependencies
         run: npm ci
-      - name: run tests
-        run: npm test
-        
+      - name: Build project
+        run: npm run build
+      - name: Deploy 
+        run: echo "deploying"
         
         
