--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: Test Project
 on: push
 jobs:
-  test1:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
@@ -15,6 +15,7 @@ jobs:
       - name: run tests
         run: npm test
   deploy:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Get code
